--- a/website/index.html
+++ b/website/index.html
@@ -1,8 +1,8 @@
-<!-- $title moomoohk/moobootstrap -->
-<!-- $projectname moobootstrap -->
+<!-- $title moomoohk/moocommands -->
+<!-- $projectname moocommands -->
 <!-- @include _header -->
 <section>
 	MooCommands is a library that provides a system where objects are created to represent different text commands, which can then be interpreted and executed with ease.
 </section>
-<!-- <!-- @include _github_downloads --> -->
+<!-- @include _links -->
 <!-- @include _footer -->
