--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!-- $title moomoohk/moocommands -->
 <!-- $projectname moocommands -->
 <!-- @include _header -->
+<h1>MooCommands</h1>
 <section>
 	MooCommands is a library that provides a system where objects are created to represent different text commands, which can then be interpreted and executed with ease.
 </section>
