--- a/website/index.html
+++ b/website/index.html
@@ -2,8 +2,8 @@
 <!-- $projectname moocommands -->
 <!-- @include _header -->
 <section>
-	<h1>MooCommands</h1>
-	MooCommands is a library that provides a system where objects are created to represent different text commands, which can then be interpreted and executed with ease.
+	<i>NOTE: This page is still under constuction</i>
+	<!-- @include _moocommands.md -->
 </section>
 <!-- @include _links -->
 <!-- @include _footer -->
